--- a/blatt4/.project
+++ b/blatt4/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>blatt4-NDA</name>
+	<name>blatt4-RC1</name>
 	<comment></comment>
 	<projects>
 	</projects>
